fix log wrapping

--- a/less/parts/tests.less
+++ b/less/parts/tests.less
@@ -77,6 +77,6 @@
   .log {
     margin-left: 40px;
     color: dimgrey;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
